# 66

./: 600301  610168.jks  70031.jks  70031A.jks  BaseGame.cpp  CMakeLists.txt  aoca.jks  build.gradle  colorful.keystore  config.gradle  crab.jks  fish.jks  frog.jks  gradle.properties  huarongroad.keystore  littlefish.jks  local.properties  private_key.pepk  readme  settings.gradle  slotglorymaster.jks  tank.jks
DownloadAnnotations/: build.gradle  github_package_publish_usage.gradle
DownloadCompiler/: build.gradle  github_package_publish_usage.gradle
DownloadCompiler/src/main/java/com/excellence/compiler/: ProxyConstant.java
DownloaderLibrary/: build.gradle  proguard-rules.pro
app/: build.gradle  dict.txt  google-services.json  proguard-rules.pro  test-proguard.txt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: main.js
app/src/main/assets/assets/main/: cc.config.c451f.json  cc.config.json  index.c451f.js  index.js
app/src/main/assets/assets/resources/: cc.config.json
app/src/main/assets/frog/assets/main/: index.js
app/src/main/assets/frog/src/: settings.json
app/src/main/assets/org/src/: settings.json
app/src/main/assets/src/: application.e31c6.js  import-map.45e53.json  settings.ddd3d.json  settings.json
app/src/main/assets/src/cocos-js/: cc.js
app/src/main/java/com/: NetRequest.java  ViewListener.java
app/src/main/java/com/crab/: CrabApplication.java
app/src/main/java/com/fish/: FishContext.java
app/src/main/java/com/game/: BaseApplication.java  BaseConfig.java  BaseConstant.java  Dex2C.java  GoogleAdApplication.java
app/src/main/java/com/sun/: mdhaat979.java  tmrbmq646.java
app/src/main/java/org/cocos/: BaseScene.java
app/src/main/java/org/sun/: CocosScene.kt  MainActivity.java
app/src/main/res/drawable/: splash.xml
app/src/main/res/layout/: activity_splash.xml  ihnsiu363.xml  qanxyscr676.xml  v_wd_d.xml  view_item.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
common/: CMakeLists.txt  cfg.cmake
common/Classes/: Game.cpp
data/: build.gradle
download/: build.gradle
download/src/main/: AndroidManifest.xml
download_ui/: build.gradle
download_ui/src/main/: AndroidManifest.xml
game/: CMakeLists.txt
game/Classes/: Game.cpp
game/fish/: Fish.cpp  Fish.h
game/tank/: TankGame.cpp  TankGame.h
gradle/wrapper/: gradle-wrapper.properties
launcher/: CMakeLists.txt  build.gradle  dict.txt  google-services(620114).json  google-services.json  proguard-rules.pro
launcher/src/main/: AndroidManifest.xml
launcher/src/main/assets/: main.js
launcher/src/main/assets/assets/main/: cc.config.4402f.json  index.4402f.js
launcher/src/main/assets/assets/main/import/02/: 020119111.4b4e5.json
launcher/src/main/assets/assets/resources/: cc.config.7000d.json
launcher/src/main/assets/assets/resources/import/02/: 02d453258.051f6.json
launcher/src/main/assets/src/: application.0804e.js  import-map.74628.json  settings.25aba.json
launcher/src/main/java/org/colorful/interconnects/: BaseApplication.kt  ColorBaseApplication.kt
launcher/src/main/res/values/: strings.xml  themes.xml
lib_service/: AndroidManifest.xml  build.gradle
lib_service/src/com/: NetInterface.java  NetRequest.java
lib_service/src/com/g/done/: BVM.java  RHelp.java
lib_service/src/com/game/d/: RequestHelp.java
lib_service/src/jni/: work.cpp
lib_service/src/org/cocos/game/ugllmf4/: Mwxjka9Activity.kt
modle-base/: build.gradle
module_ui/: build.gradle
module_ui/src/main/: AndroidManifest.xml
module_ui/src/main/res/values/: themes.xml
plugin_library/: build.gradle  gradle.properties
tank/: build.gradle
ui/: build.gradle  proguard-rules.pro
ui/src/main/: AndroidManifest.xml
ui/src/main/res/drawable/: p_g.xml  r_g.xml
ui/src/main/res/layout/: a_s.xml  v_wd_d.xml
ui/src/main/res/values/: strings.xml  themes.xml
ui/src/main/res/values-night/: themes.xml
(+705 files in other folders)
