cmake_minimum_required(VERSION 3.8)
enable_language(C ASM)

option(APP_NAME "Project Name" "Slot Glory Master")
project(${APP_NAME} CXX)
set(CC_LIB_NAME cocos)
set(CC_PROJECT_DIR ${CMAKE_CURRENT_LIST_DIR})
set(CC_PROJ_SOURCES)
set(CC_COMMON_SOURCES)
set(CC_ALL_SOURCES)
#include(${CMAKE_CURRENT_LIST_DIR}/common/CMakeLists.txt)

set(DEVELOPMENT_TEAM    ""  CACHE STRING "APPLE Developtment Team")
set(RES_DIR             ""  CACHE STRING "Resource path")
set(COCOS_X_PATH        ""  CACHE STRING "Path to engine/native/")

set(TARGET_OSX_VERSION "10.14" CACHE STRING "Target MacOSX version" FORCE)
set(TARGET_IOS_VERSION "11.0"  CACHE STRING "Target iOS version" FORCE)

set(CMAKE_CXX_STANDARD 17)
option(CC_DEBUG_FORCE           "Force enable CC_DEBUG in release mode" OFF)
option(USE_SE_V8                "Use V8 JavaScript Engine"              ON)
option(USE_V8_DEBUGGER          "Compile v8 inspector ws server"        OFF)
option(USE_V8_DEBUGGER_FORCE    "Force enable debugger in release mode" OFF)
option(USE_SOCKET               "Enable WebSocket & SocketIO"           OFF)
option(USE_AUDIO                "Enable Audio"                          ON)     #Enable AudioEngine
option(USE_EDIT_BOX             "Enable EditBox"                        OFF)
option(USE_SE_JSC               "Use JavaScriptCore on MacOSX/iOS"      OFF)
option(USE_VIDEO                "Enable VideoPlayer Component"          OFF)
option(USE_WEBVIEW              "Enable WebView Component"              OFF)
option(USE_MIDDLEWARE           "Enable Middleware"                     ON)
option(USE_DRAGONBONES          "Enable Dragonbones"                    ON)
option(USE_SPINE                "Enable Spine"                          ON)
option(USE_WEBSOCKET_SERVER     "Enable WebSocket Server"               OFF)
option(USE_JOB_SYSTEM_TASKFLOW  "Use taskflow as job system backend"    OFF)
option(USE_JOB_SYSTEM_TBB       "Use tbb as job system backend"         OFF)
option(USE_PHYSICS_PHYSX        "Use PhysX Physics"                     ON)
option(USE_OCCLUSION_QUERY      "Use Occlusion Query"                   ON)
option(USE_DEBUG_RENDERER       "Use Debug Renderer"                    OFF)
option(USE_GEOMETRY_RENDERER    "Use Geometry Renderer"                 ON)
option(USE_WEBP                 "Use Webp"                              OFF)

if(NOT RES_DIR)
    message(FATAL_ERROR "RES_DIR is not set!")
endif()

set(CC_USE_GLES3 ON)
set(CC_USE_GLES2 ON)
set(USE_SERVER_MODE OFF)
set(NET_MODE 0)

set(CC_ENABLE_SWAPPY OFF)
set(APP_NAME 500184)
set(COCOS_X_PATH "C:/ProgramData/cocos/editors/Creator/3.6.0/resources/resources/3d/engine/native")
set(USE_JOB_SYSTEM_TASKFLOW OFF)
set(USE_JOB_SYSTEM_TBB OFF)
set(ENABLE_ANTIALIAS_FXAA OFF)
set(USE_PHYSICS_PHYSX OFF)
set(USE_OCCLUSION_QUERY OFF)
set(USE_GEOMETRY_RENDERER OFF)
set(USE_DEBUG_RENDERER OFF)
set(USE_AUDIO ON)
set(USE_VIDEO OFF)
set(USE_WEBVIEW OFF)
set(USE_SPINE ON)
set(USE_DRAGONBONES ON)
set(CC_USE_VULKAN OFF)

if(NOT COCOS_X_PATH)
    message(FATAL_ERROR "COCOS_X_PATH is not set!")
endif()

include(${COCOS_X_PATH}/CMakeLists.txt)

list(APPEND CC_COMMON_SOURCES
        ${CMAKE_CURRENT_LIST_DIR}/Game.h
        ${CMAKE_CURRENT_LIST_DIR}/Game.cpp
        )

cc_android_before_target(${CC_LIB_NAME})
add_library(${CC_LIB_NAME} SHARED ${CC_ALL_SOURCES})
cc_android_after_target(${CC_LIB_NAME})